Hope I fixed Builds

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,8 +31,8 @@ jobs:
           nuget-api-key: ${{ secrets.NuGetAPIKey }}
           nuget-version: '5.x'
 
-    #- name: Run Nuget
-    #  run: nuget restore Horion.sln
+    - name: Run Nuget
+      run: nuget restore Horion.sln
 
     - name: MSBuild
       run: msbuild Horion.sln -m
@@ -54,7 +54,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object,
+        # which include a `upload_url`. See this blog post for more info:
+        # https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: x64\Debug\Horion.dll
         asset_name: Horion.dll
         asset_content_type: application/vnd.microsoft.portable-executable
