--- a/Horion.vcxproj
+++ b/Horion.vcxproj
@@ -174,6 +174,7 @@
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
       <PreprocessorDefinitions>NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
+      <ShowIncludes>true</ShowIncludes>
     </ClCompile>
     <Link />
     <Link>
