--- a/Horion.vcxproj
+++ b/Horion.vcxproj
@@ -234,7 +234,7 @@
     <ResourceCompile Include="Horion.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Horion\Module\Modules\AutoBucket.cpp" />
+    <!--<ClCompile Include="Horion\Module\Modules\AutoBucket.cpp" />-->
     <ClCompile Include="Horion\Command\CommandMgr.cpp" />
     <ClCompile Include="Horion\Command\Commands\BindCommand.cpp" />
     <ClCompile Include="Horion\Command\Commands\BruhCommand.cpp" />
@@ -421,7 +421,7 @@
     <ClCompile Include="WellThatsAnkward\selectionHighlight.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Horion\Module\Modules\AutoBucket.h" />
+    <!--<ClInclude Include="Horion\Module\Modules\AutoBucket.h" />-->
     <ClInclude Include="Horion\Command\CommandMgr.h" />
     <ClInclude Include="Horion\Command\Commands\BindCommand.h" />
     <ClInclude Include="Horion\Command\Commands\BruhCommand.h" />
