--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -1,4 +1,4 @@
-name: MSBuild
+name: BuildCheck
 
 on: [push]
 
@@ -6,15 +6,17 @@ env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: .
 
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: Release
+  ## Configuration type to build.
+  ## You can convert this to a build matrix if you need coverage of multiple configuration types.
+  ## https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  #BUILD_CONFIGURATION: Release
 
 jobs:
   build:
     runs-on: windows-latest
-
+    strategy:
+      matrix:
+        build: [Release, Debug]
     steps:
     - uses: actions/checkout@v2
 
@@ -29,10 +31,12 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-    - uses: LouisBrunner/checks-action@v1.1.1
+      run: msbuild /m /p:Configuration=${{matrix.build}} ${{env.SOLUTION_FILE_PATH}}
+    
+    - name: Finish-Check
+      #- uses: LouisBrunner/checks-action@v1.1.1
       if: always()
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        name: Test XYZ
-        conclusion: ${{ job.status }}
+        token: ${{secrets.GITHUB_TOKEN}}
+        name: Test &{{matrix.build}}
+        conclusion: ${{job.status}}
