--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -34,7 +34,7 @@ jobs:
       run: msbuild /m /p:Configuration=${{matrix.build}} ${{env.SOLUTION_FILE_PATH}}
     
     - name: Finish-Check
-      #- uses: LouisBrunner/checks-action@v1.1.1
+    - uses: LouisBrunner/checks-action@v1.1.1
       if: always()
       with:
         token: ${{secrets.GITHUB_TOKEN}}
