--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -33,10 +33,9 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{matrix.build}} ${{env.SOLUTION_FILE_PATH}}
     
-    - name: Finish-Check
-    - uses: LouisBrunner/checks-action@v1.1.1
-      if: always()
-      with:
-        token: ${{secrets.GITHUB_TOKEN}}
-        name: Test &{{matrix.build}}
-        conclusion: ${{job.status}}
+    #- uses: LouisBrunner/checks-action@v1.1.1
+    #  if: always()
+    #  with:
+    #    token: ${{secrets.GITHUB_TOKEN}}
+    #    name: Test &{{matrix.build}}
+    #    conclusion: ${{job.status}}
